Make things compilable (sans tests) on JDK 8