@@ -15,7 +15,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mastfrog</groupId>
@@ -44,9 +44,6 @@ limitations under the License.
         </license>
     </licenses>
     <packaging>nbm</packaging>
-    <properties>
-        <maven.test.skip>false</maven.test.skip>
-    </properties>
     <build>
         <plugins>
             <plugin>
@@ -60,8 +57,38 @@ limitations under the License.
                     <publicPackages/>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <parallel>none</parallel>
+                    <parallelMavenExecution>false</parallelMavenExecution>
+                    <perCoreThreadCount>0</perCoreThreadCount>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <threadCount>0</threadCount>
+                    <forkCount>0</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <trimStackTrace>false</trimStackTrace>
+                    <argline>--illegal-access=permit</argline>
+                    <systemPropertyVariables>
+                        <unit.test>true</unit.test>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>            
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>skip-tests-jdk-8</id>
+            <activation>
+                <jdk>8</jdk>
+            </activation>
+            <properties>
+                <maven.test.skip>true</maven.test.skip>
+            </properties>
+        </profile>
+    </profiles>    
     <dependencies>
         <dependency>
             <groupId>org.netbeans.contrib.yenta</groupId>
